# sendpushover-rust

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: release.yml
scripts/: build-all.sh
src/: main.rs
