[package]
name = "sendpushover"
version = "0.3.0"
edition = "2021"
description = "Send Pushover notifications from the command line"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
